--- a/Programming Assignment 4/program04-template.ipynb
+++ b/Programming Assignment 4/program04-template.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Name: <YOUR NAME>\n",
-    "Email: <YOUR GRADESCOPE EMAIL>\n",
+    "Name: Jiaxiong J Guan\n",
+    "Email: Jiaxiong.guan65@myhunter.cuny.edu\n",
     "\"\"\""
    ]
   },
@@ -23,10 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7d7cb859-6726-4a3e-9e13-37fe6300aafb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'geopandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgeopandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mgpd\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pyplot \u001b[38;5;28;01mas\u001b[39;00m plt\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'geopandas'"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
@@ -54,12 +66,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3a394218-361a-4b10-8630-28bf3c8eea64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INCIDENT_DATE</th>\n",
+       "      <th>INCIDENT_TIME</th>\n",
+       "      <th>BORO_NM</th>\n",
+       "      <th>TYP_DESC</th>\n",
+       "      <th>ARRIVD_TS</th>\n",
+       "      <th>CLOSNG_TS</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:01:10</td>\n",
+       "      <td>STATEN ISLAND</td>\n",
+       "      <td>AMBULANCE CASE: EDP/OUTSIDE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2024 12:57:30 AM</td>\n",
+       "      <td>40.529657</td>\n",
+       "      <td>-74.230212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:01:10</td>\n",
+       "      <td>STATEN ISLAND</td>\n",
+       "      <td>AMBULANCE CASE: EDP/OUTSIDE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2024 12:58:37 AM</td>\n",
+       "      <td>40.529657</td>\n",
+       "      <td>-74.230212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:02:07</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>AMBULANCE CASE: UNCONSCIOUS/INSIDE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2024 12:07:55 AM</td>\n",
+       "      <td>40.759150</td>\n",
+       "      <td>-73.960844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:04:19</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>AMBULANCE CASE: SERIOUS/INSIDE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2024 03:07:00 AM</td>\n",
+       "      <td>40.816088</td>\n",
+       "      <td>-73.895824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:04:27</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>AMBULANCE CASE: UNCONSCIOUS/INSIDE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2024 12:57:12 AM</td>\n",
+       "      <td>40.722053</td>\n",
+       "      <td>-73.988215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:08:26</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>AMBULANCE CASE: UNCONSCIOUS/INSIDE</td>\n",
+       "      <td>01/01/2024 12:22:37 AM</td>\n",
+       "      <td>01/01/2024 12:26:31 AM</td>\n",
+       "      <td>40.699516</td>\n",
+       "      <td>-73.916920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:12:07</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>AMBULANCE CASE: EDP/OUTSIDE</td>\n",
+       "      <td>01/01/2024 12:35:18 AM</td>\n",
+       "      <td>01/01/2024 01:21:43 AM</td>\n",
+       "      <td>40.595930</td>\n",
+       "      <td>-73.908054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:12:07</td>\n",
+       "      <td>BROOKLYN</td>\n",
+       "      <td>AMBULANCE CASE: EDP/OUTSIDE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2024 01:52:34 AM</td>\n",
+       "      <td>40.595930</td>\n",
+       "      <td>-73.908054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:12:58</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>AMBULANCE CASE: UNCONSCIOUS/OUTSIDE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2024 12:41:35 AM</td>\n",
+       "      <td>40.755490</td>\n",
+       "      <td>-74.000240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>01/01/2024</td>\n",
+       "      <td>00:14:34</td>\n",
+       "      <td>BRONX</td>\n",
+       "      <td>AMBULANCE CASE: UNCONSCIOUS/INSIDE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2024 02:02:28 AM</td>\n",
+       "      <td>40.906027</td>\n",
+       "      <td>-73.847146</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  INCIDENT_DATE INCIDENT_TIME        BORO_NM  \\\n",
+       "0    01/01/2024      00:01:10  STATEN ISLAND   \n",
+       "1    01/01/2024      00:01:10  STATEN ISLAND   \n",
+       "2    01/01/2024      00:02:07      MANHATTAN   \n",
+       "3    01/01/2024      00:04:19          BRONX   \n",
+       "4    01/01/2024      00:04:27      MANHATTAN   \n",
+       "5    01/01/2024      00:08:26       BROOKLYN   \n",
+       "6    01/01/2024      00:12:07       BROOKLYN   \n",
+       "7    01/01/2024      00:12:07       BROOKLYN   \n",
+       "8    01/01/2024      00:12:58      MANHATTAN   \n",
+       "9    01/01/2024      00:14:34          BRONX   \n",
+       "\n",
+       "                              TYP_DESC               ARRIVD_TS  \\\n",
+       "0          AMBULANCE CASE: EDP/OUTSIDE                     NaN   \n",
+       "1          AMBULANCE CASE: EDP/OUTSIDE                     NaN   \n",
+       "2   AMBULANCE CASE: UNCONSCIOUS/INSIDE                     NaN   \n",
+       "3       AMBULANCE CASE: SERIOUS/INSIDE                     NaN   \n",
+       "4   AMBULANCE CASE: UNCONSCIOUS/INSIDE                     NaN   \n",
+       "5   AMBULANCE CASE: UNCONSCIOUS/INSIDE  01/01/2024 12:22:37 AM   \n",
+       "6          AMBULANCE CASE: EDP/OUTSIDE  01/01/2024 12:35:18 AM   \n",
+       "7          AMBULANCE CASE: EDP/OUTSIDE                     NaN   \n",
+       "8  AMBULANCE CASE: UNCONSCIOUS/OUTSIDE                     NaN   \n",
+       "9   AMBULANCE CASE: UNCONSCIOUS/INSIDE                     NaN   \n",
+       "\n",
+       "                CLOSNG_TS   Latitude  Longitude  \n",
+       "0  01/01/2024 12:57:30 AM  40.529657 -74.230212  \n",
+       "1  01/01/2024 12:58:37 AM  40.529657 -74.230212  \n",
+       "2  01/01/2024 12:07:55 AM  40.759150 -73.960844  \n",
+       "3  01/01/2024 03:07:00 AM  40.816088 -73.895824  \n",
+       "4  01/01/2024 12:57:12 AM  40.722053 -73.988215  \n",
+       "5  01/01/2024 12:26:31 AM  40.699516 -73.916920  \n",
+       "6  01/01/2024 01:21:43 AM  40.595930 -73.908054  \n",
+       "7  01/01/2024 01:52:34 AM  40.595930 -73.908054  \n",
+       "8  01/01/2024 12:41:35 AM  40.755490 -74.000240  \n",
+       "9  01/01/2024 02:02:28 AM  40.906027 -73.847146  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ambulance_calls_df = ..."
+    "ambulance_calls_df = pd.read_csv('911-ambulance-calls-2024-Jan-Sep.csv')\n",
+    "ambulance_calls_df.head(10)"
    ]
   },
   {
@@ -84,7 +286,18 @@
    "outputs": [],
    "source": [
     "# clean up table\n",
-    "..."
+    "ambulance_calls_df.rename(columns = {'CLOSNG_TS' : 'closing_ts', \n",
+    "                                   'ARRIVD_TS' : 'arrived_ts'}, inplace = True)\n",
+    "ambulance_calls_df['arrived_ts'] = pd.to_datetime(ambulance_calls_df['arrived_ts'], \n",
+    "                                                  format = '%m/%d/%Y %I:%M:%S %p')\n",
+    "ambulance_calls_df['closing_ts'] = pd.to_datetime(ambulance_calls_df['closing_ts'], \n",
+    "                                                  format = '%m/%d/%Y %I:%M:%S %p')\n",
+    "\n",
+    "ambulance_calls_df[\"incident_ts\"] = pd.to_datetime(ambulance_calls_df[\"INCIDENT_DATE\"] + \" \" \n",
+    "                                                   + ambulance_calls_df[\"INCIDENT_TIME\"])\n",
+    "\n",
+    "ambulance_calls_df.columns = [col.lower() for col in ambulance_calls_df.columns]\n",
+    "ambulance_calls_df.head(10)"
    ]
   },
   {
@@ -490,7 +703,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -504,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
